                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.3
   *) [TS-1123] editline/readline conflicts when building on OSX.

  *) [TS-1116] Fixes for building the source with clang/lvm.

  *) [TS-1115] Fixes for building the source with Intel CC (icc).

  *) [TS-1102] Cleanup of Diagnostics code. Author: Uri Shachar and Leif.

  *) [TS-1117] Remove TS_HAS_PURIFY MACRO

  *) [TS-937] EThread::execute still processing cancelled event

  *) [TS-995] Name change for IP support (ink_inet.h).

  *) [TS-841] support TLS NextProtocol negotiation

Changes with Apache Traffic Server 3.1.2

  *) [TS-1110] logstats incorrectly bucketizes all status codes greater 
  than 599 as 5xx. Author: Manjesh Nilange

  *) [TS-1094] Fixed MIME parser so certain sequences of requests on
   keep alive conections no longer wedge it.

  *) [TS-1084] Add compile-time format string checking.

  *) [TS-1101] traffic_line -x no longer works, at least not in
   reasonable time.

  *) [TS-1098] Make RC script support Amazon EC2 Linux AMI.

  *) [TS-1035] EventProcessor::spawn_thread doesn't check that there
   is enough event threads and segfaults.

  *) [TS-1096] readline support for traffic_shell.

  *) [TS-1097] online help for traffic_shell.

  *) [TS-1066] TSHttpTxnServerReqHdrBytesGet in InkAPI.cc has an extra
   parameter (int *bytes) from the prototype in <ts/ts.h>.
   Author: Alistair Stevenson

  *) [TS-1089] Added TSHttpConnectTransparent.

  *) [TS-1088] Added TSHttpTxnOutgoingTransparencySet to API to
   control outbound transparency.

  *) [TS-1083] Initial SSL next protocol negotiation support.

  *) [TS-1082] Obey existing optimizer CXXFLAGS and CFLAGS at configure time.

  *) [TS-1077] All proxy ports are now configured by
   proxy.config.http.server_ports. All other port configuration values
   are deprecated.

  *) [TS-1091] CFLAGS=-w` causes configure script to wrongly guess style of