@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.3
-   *) [TS-1123] editline/readline conflicts when building on OSX.
+  *) [TS-1109] fix stack dump crashing
+
+  *) [TS-1123] editline/readline conflicts when building on OSX.
 
   *) [TS-1116] Fixes for building the source with clang/lvm.
 
